✨ Enhance typography: redesigned titles with elegant spacing

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
     <main>
         <section class="page-hero">
             <div class="container">
-                <h2>当店の特色</h2>
-                <p>Cafe VibeCordingのこだわりと想い</p>
+                <h2 class="page-title">職人が紡ぐ、一杯のストーリー</h2>
+                <p>豆から生まれる香りと、空間が奏でる心地よい時間</p>
             </div>
         </section>
 
