--- a/events.html
+++ b/events.html
@@ -37,8 +37,8 @@
     <main>
         <section class="page-hero">
             <div class="container">
-                <h2>イベント案内</h2>
-                <p>Cafe VibeCordingで開催される特別なイベントをご紹介</p>
+                <h2 class="page-title">心つながる、特別な体験</h2>
+                <p>コーヒーを通じて生まれる、新しい出会いと発見</p>
             </div>
         </section>
 
