--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="hero-text-section">
                 <div class="hero-content">
-                    <h2>モダンで洗練された空間で、<br>特別なひとときを</h2>
+                    <h2 class="hero-title">東京駅から徒歩1分、<br>心が躍るコーヒー体験を</h2>
                     <p>東京駅から徒歩1分、ブルックリン風のおしゃれなカフェで<br>厳選された素材とこだわりの焙煎コーヒーをお楽しみください</p>
                     <div class="hero-buttons">
                         <a href="menu.html" class="btn-primary">メニューを見る</a>
@@ -51,7 +51,7 @@
 
         <section class="features">
             <div class="container">
-                <h3>Cafe VibeCordingの魅力</h3>
+                <h3 class="section-title">五感で味わう、上質なカフェタイム</h3>
                 <div class="features-grid">
                     <div class="feature-item boxed">
                         <span class="material-icons feature-icon">local_cafe</span>
