--- a/location.html
+++ b/location.html
@@ -37,8 +37,8 @@
     <main>
         <section class="page-hero">
             <div class="container">
-                <h2>所在地・アクセス</h2>
-                <p>東京駅から徒歩1分の好立地</p>
+                <h2 class="page-title">都心のオアシスへ、ようこそ</h2>
+                <p>喧騒を離れ、静寂に包まれた上質な時間が待っています</p>
             </div>
         </section>
 
