--- a/menu.html
+++ b/menu.html
@@ -37,8 +37,8 @@
     <main>
         <section class="page-hero">
             <div class="container">
-                <h2>人気メニュー</h2>
-                <p>厳選素材を使用したこだわりの逸品</p>
+                <h2 class="page-title">味覚を彩る、厳選の逸品</h2>
+                <p>一杯一杯に込められた、職人の技と想い</p>
             </div>
         </section>
 
