✨ Update hero title: 'モダンで洗練された空間で心が躍る特別なひとときを' with refined typography

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="hero-text-section">
                 <div class="hero-content">
-                    <h2 class="hero-title">東京駅から徒歩1分、<br>心が躍るコーヒー体験を</h2>
+                    <h2 class="hero-title">モダンで洗練された空間で<br>心が躍る特別なひとときを</h2>
                     <p>東京駅から徒歩1分、ブルックリン風のおしゃれなカフェで<br>厳選された素材とこだわりの焙煎コーヒーをお楽しみください</p>
                     <div class="hero-buttons">
                         <a href="menu.html" class="btn-primary">メニューを見る</a>
